nicerapp/domainConfigs/nicerapp_v2/index.css
html, body {
    padding : 0;
    margin : 0;
    font-family: 'Open Sans', sans-serif;
}
body {
    overflow : hidden;
}
#siteBackground {
    position:absolute;
}
#siteBackground img {
    display : none;
    position : absolute;
}
img.bg_first {
    z-index : 211;
    display : none;
}
img.bg_last {
    z-index : 212;
    display : none;
}
#bg_video {
    width : 100%;
    height : 100%;
    position : relative;
    z-index : 8;
}

.vividInfoDialog {
    position : absolute;
    z-index : 1000;
}

.vdBackground {
    position : absolute;
    width : 100%;
    height : 100%;
    z-index : -1;
}

.vividDialogPopup {
    border : 3px ridge lime;
    border-radius : 15px;
}

#siteContent {
    top : calc(1vh + 4rem);
    left : 1vw;
    width : calc(98vw - 6px);
    height : calc(97vh - 4rem - 6px);
    display : none;
    /*top : 48vh;
    left : 48vw;
    width : 4vw;
    height : 4vh;
    border-radius : 20px;*/
}
.vividDialogContent {
    overflow : auto;
    margin : 10px;
    display : none;
    /*width : calc(98vw - 15px);
    height: calc(100vh - 120px);*/
    width : calc(100% - 20px);
    height : calc(100% - 20px);
    z-index : 1100;
    /*opacity : 0.0001;*/
}
.vividDialogContent table, .vividDialogContent td {
    z-index : 1101;
}

#siteDateTime {
    display : flex;
    justify-content : center;
    align-items : center;
    text-align : center;
}

#siteComments {
    top : 2vh;
    height : 96vh;
    left : 102vw;
    width : 250px;
}

#siteToolbarRight {
    top : 2vh;
    height : 96vh;
    left : 102vw;
    width : 220px;
}

#siteStatusbar {
    top : 102vh;
    height : 4.5rem;
    left : 1vw;
    width : 98vw;
}
#siteStatusbar .vividDialogContent {
    width : 100%;
    height : 100%;
}
#siteStatusbar .vividDialogContent td {
    vertical-align: middle;
}



#siteVideo {
    top : 2vh;
    left : 102vw;
    height : 250px;
    width : 250px;
}

#siteVideoSearch {
    top : calc(2vh + 260px);
    left : 102vw;
    height : calc(97vh - 260px);
    width : 230px;
}

.vividDialog {
    position : absolute;
    display : block;
    z-index : 1000;
}
.vividButton, .vividMenu {
    position : absolute;
    display : flex;
    font-size : 0.3rem;
    z-index : 1000;
    justify-content : center;
    align-items : center;
    text-align : center;
}
.vividButton, .vividButtonSelected {
    position : absolute;
    display : flex;
    justify-content : center;
    align-items : center;
    text-align : center;
    width : 180px;
    height : 0.55rem;
    font-size : 0.8rem;
    font-weight : bold;
}
.vividButton.level1, .vividButtonSelected.level1 {
    margin-top : 5px;
}

#siteDateTime {
    top : -5rem;
    left : 10px;
    width : 230px;
    height : 2.8rem;
    font-size : 1rem;
    font-weight : bold;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius : 10px;
}
#siteDateTime .vdBackground {
    border-radius : 10px;
}

#btnOptions {
    position : absolute;
    opacity : 0.0001;
}

#btnLoginLogout {
    position : absolute;
    opacity : 0.0001;
}

#btnChangeBackground {
    position : absolute;
    opacity : 0.0001;
}
.vividButton_icon {
    z-index : 1100;
    width : 50px;
    height : 50px;
    border-radius : 8px;
    
}
.vividButton_icon img {
    position : absolute;
    top : 0px;
    left : 0px;
    width : 50px;
    height : 50px;
}
.cvbBorderCSS {
    position : absolute;
    top : 0px;
    left : 0px;
    width : 50px;
    height : 50px;
    z-index : 2002;
    border-radius : 8px;
    /*background-image : radial-gradient(circle 45px at center, rgba(0,255,0,1), rgba(0,0,0,0));*/
    box-shadow : 2px 2px 2px 2px rgba(0,0,0,0.7);
}
.cvbImgBorder { z-index : 2001; }
.cvbImgTile { z-index : 2010; }
.cvbImgButton { z-index : 2015; }
    
.vdSettings {
    position : absolute;
    top : -15px;
    left : 15px;
    width : 200px;
    height : 50px;
    opacity : 0.0001;
}
.vdSettings img {
    position : absolute;
    top : 0px;
    left : 0px;
    width : 50px;
    z-index : 5000;
}
.sliderOpacityRange {
    position : absolute;
    top : -2px;
    left : 55px;
    -webkit-appearance: none;  /* Override default CSS styles */
    appearance: none;
    width: calc(100% - 55px); /* Full-width */
    height: 25px; /* Specified height */
    background: rgba(0,0,0,0.95); /* Grey background */
    z-index : 5000;
    border : 2px ridge rgba(100,100,100,0.7);
    border-radius : 8px;
    outline: none; /* Remove outline */
    opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
    -webkit-transition: .2s; /* 0.2 seconds transition on hover */
    transition: opacity .2s;
}
.sliderOpacityRange:hover {
  opacity: 1; /* Fully shown on mouse-over */
}
.sliderOpacityRange::-moz-range-thumb {
  width: 25px; /* Set a specific slider handle width */
  height: 25px; /* Slider handle height */
  background: #4CAF50; /* Green background */
  cursor: pointer; /* Cursor on hover */
}

.sliderOpacityRangeDialogSettings {
    vertical-align : middle;
    position : absolute;
    left : 5px;
    display : none;
    -webkit-appearance: none;  /* Override default CSS styles */
    appearance: none;
    width: calc(100% - 15px); /* Full-width */
    height: 25px; /* Specified height */
    background: rgba(0,0,0,0.95); /* Grey background */
    z-index : 5000;
    border : 2px ridge rgba(100,100,100,0.7);
    border-radius : 8px;
    outline: none; /* Remove outline */
    opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
    -webkit-transition: .2s; /* 0.2 seconds transition on hover */
    transition: opacity .2s;
}
.sliderOpacityRangeDialogSettings:hover {
  opacity: 1; /* Fully shown on mouse-over */
}
.sliderOpacityRangeDialogSettings::-moz-range-thumb {
  width: 25px; /* Set a specific slider handle width */
  height: 25px; /* Slider handle height */
  background: #4CAF50; /* Green background */
  cursor: pointer; /* Cursor on hover */
}
/* ... */

